change form layout to be more resposive

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ h1 {
   margin-bottom: 0;
 }
 form {
-  padding: 1.5rem 6rem;
+  ssspadding: 1.5rem 6rem;
   background-color: #a39f9f;
 }
 .uk-button {
